civo/ingress/web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/content-type-nosniff: "false"
    cert-manager.io/issuer: "dependencies-issuer-prod"
  name: web-ingress
spec:
  rules:
    - host: www.dependencies-graph.xyz
      http:
        paths:
          - backend:
              serviceName: graph-viewer-service
              servicePort: 4200
            path: /
  tls:
    - hosts:
        - www.dependencies-graph.xyz
      secretName: dependencies-tls
